# traigegeist

./: .gitignore  README.md  app.py  data_processing.ipynb  dataloader_helpers.py  eda.ipynb  modelling.ipynb  models.py  pyproject.toml  utils.py
format/: ed18for.txt  ed19for.txt  ed20for.txt  ed21for.txt
notebooks/: Untitled-2.ipynb  comprehensive_triage_modelling.ipynb  data_processing.ipynb  eda.ipynb  model_interpretation.ipynb  modelling.ipynb  nlp.ipynb  nlp_dl.ipynb  nlp_lime_explanations.ipynb  text_processing.ipynb
results/classification_reports/: lgbm_balanced_oof_seed42_20260414_171920.json  lgbm_balanced_oof_seed42_20260414_171920.txt  lgbm_balanced_oof_seed42_20260415_232747.json  lgbm_balanced_oof_seed42_20260415_232747.txt  lgbm_ordinal_reg_holdout_seed42_20260417_152532.json  lgbm_ordinal_reg_holdout_seed42_20260417_152532.txt  lgbm_ordinal_reg_holdout_seed42_20260417_155141.json  lgbm_ordinal_reg_holdout_seed42_20260417_155141.txt  lgbm_ordinal_reg_oof_seed42_20260417_152919.json  lgbm_ordinal_reg_oof_seed42_20260417_152919.txt  lgbm_ordinal_reg_oof_seed42_20260417_155527.json  lgbm_ordinal_reg_oof_seed42_20260417_155527.txt  rf_balanced_oof_seed42_20260414_170539.json  rf_balanced_oof_seed42_20260414_170539.txt  rf_balanced_oof_seed42_20260415_232504.json  rf_balanced_oof_seed42_20260415_232504.txt  (+94 more)
scripts/: __init__.py  data_processing  data_processing.py  helpers.py  keyword_extractor.py  models.py  nlp.py  pipeline.py
working_data/: nhamcs_emergency_keyword_flags_matched_only.csv  nlp_oof_logits_probs.csv
(+42 files in other folders)
