[project]
name = "triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "interpret>=0.7.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.0",
    "xgboost>=3.2.0",
]
